--- a/motorwerks.html
+++ b/motorwerks.html
@@ -10,6 +10,16 @@
   <h1>Motorwerks BMW, Bloomington-Mobile Service</h1>
   </div>
   <div class="header">
+  <h1>New Vehicle Limited Warranty Includes</h1>
+  </div>
+  <ul>
+    <li>Lockout Service</li>
+    <li>Emergency Fuel Delivery (Stranded on side of road)</li>
+    <li>Jump Start & Battery Replacement if Faulty</li>
+    <li>Fluid Top Off (Includes engine oil)</li>
+    <li>Low Tire Pressure Adjustment</li>
+  </ul>
+  <div class="header">
   <h2>Safety & Emission Recalls</h2>
   </div>
 <body>
@@ -29,7 +39,7 @@
     <li>B650817</li>
     <li>B651513</li>
   </ul>
-  <p>Driver's Front Airbag (NADI) Infaltor</p>
+  <p>Driver's Front Airbag (NADI) Inflator</p>
   <ul>
     <li>B650921</li>
     <li>B652419</li>
@@ -107,7 +117,7 @@
     <li>B120921</li>
     <li>B610922</li>
   </ul>
-  <p>Program the Duel Storage System</p>
+  <p>Program the Dual Storage System</p>
   <ul>
     <li>B610321</li>
   </ul>
@@ -130,16 +140,6 @@
     <li>Wiper Blades</li>
     <li>Tow Hook Covers</li>
     <li>Some Trim Pieces</li>
-  </ul>
-  <div class="header">
-  <h1>New Vehicle Limited Warranty Includes</h1>
-  </div>
-  <ul>
-    <li>Lockout Service</li>
-    <li>Emergency Fuel Delivery (Stranded on side of road)</li>
-    <li>Jump Start & Battery Replacement if Faulty</li>
-    <li>Fluid Top Off (Includes engine oil)</li>
-    <li>Low Tire Pressure Adjustment</li>
   </ul>
   <h5>Note: Recalls-up to 100 miles from dealership. Customer pay-up to 50 miles from the dealership.</h5>
 </body>
