--- a/motorwerks.html
+++ b/motorwerks.html
@@ -133,7 +133,9 @@
   <ul>
     <li>B610211</li>
   </ul>
-  <p>Special Ordered Parts</p>
+  <div class="header">
+  <h2>Special Ordered Parts</h2>
+  </div>
   <ul>
     <li>Engine Air Filters</li>
     <li>Microfilters</li>
