--- a/motorwerks.html
+++ b/motorwerks.html
@@ -1,148 +1,179 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mobile Service</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Motorwerks BMW-Mobile Service</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
-  <div class="mobile">
-  <h1>Motorwerks BMW, Bloomington-Mobile Service</h1>
-  </div>
-  <div class="header">
-  <h1>New Vehicle Limited Warranty Includes</h1>
-  </div>
-  <ul>
-    <li>Lockout Service</li>
-    <li>Emergency Fuel Delivery (Stranded on side of road)</li>
-    <li>Jump Start & Battery Replacement if Faulty</li>
-    <li>Fluid Top Off (Includes engine oil)</li>
-    <li>Low Tire Pressure Adjustment</li>
-  </ul>
-  <div class="header">
-  <h2>Safety & Emission Recalls</h2>
-  </div>
 <body>
-  <p>Takata Front Driver Airbag Module</p>
-  <ul>
-    <li>B651115</li>
-    <li>B650416</li>
-    <li>B650217</li>
-    <li>B650320</li>
-    <li>B650519</li>
+<ul class="navigation">
+    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/BMW_logo_%28white_%2B_grey_background_square%29.svg/2048px-BMW_logo_%28white_%2B_grey_background_square%29.svg.png" height= "80px;"></li>
+    <li class="header">Motorwerks BMW, Bloomington - Mobile Service</li>
   </ul>
-  <p>Takata Front Passenger Airbag Module</p>
-  <ul>
-    <li>B651714</li>
-    <li>B650120</li>
-    <li>B650219</li>
-    <li>B650817</li>
-    <li>B651513</li>
-  </ul>
-  <p>Driver's Front Airbag (NADI) Inflator</p>
-  <ul>
-    <li>B650921</li>
-    <li>B652419</li>
-    <li>B652519</li>
-  </ul>
-  <p>Positive Crankcase Ventilation (PCV) Valve Heater</p>
-  <ul>
-    <li>B110122</li>
-  </ul>
-  <p>Crankcase Breather</p>
-  <ul>
-    <li>B110901</li>
-  </ul>
-  <p>Blower Motor Wiring</p>
-  <ul>
-    <li>B640717</li>
-    <li>B640619</li>
-  </ul>
-  <p>Check the Battery Cable Connection</p>
-  <ul>
-    <li>B611412</li>
-  </ul>
-  <p>Repair the Positive/Negative Battery Cable</p>
-  <ul>
-    <li>B611119</li>
-    <li>B610213</li>
-    <li>B610918</li>
-  </ul>
-  <p>Ground Cable for Rear Light Lamps</p>
-  <ul>
-    <li>B630611</li>
-  </ul>
-  <p>Replace Rear Lamp Bulb Carriers</p>
-  <ul>
-    <li>B630613</li>
-  </ul>
-  <p>Both Rear Reflectors</p>
-  <ul>
-    <li>B630717</li>
-  </ul>
-  <p>Third Brake Lamp</p>
-  <ul>
-    <li>B630220</li>
-  </ul>
-  <p>OC3 Mat - X3's ONLY</p>
-  <ul>
-    <li>B651617</li>
-  </ul>
-  <p>Safety Belt Retractor</p>
-  <ul>
-    <li>B720421</li>
-  </ul>
-  <p>Emergency Locking Retractor</p>
-  <ul>
-    <li>B720219</li>
-  </ul>
-  <p>B-Pillar Occupant Protection</p>
-  <ul>
-    <li>B511719</li>
-  </ul>
-  <p>Engine Belt Idler Pulley Bolt</p>
-  <ul>
-    <li>B260217</li>
-  </ul>
-  <p>Checking the Front Side Panel</p>
-  <ul>
-    <li>B410321</li>
-  </ul>
-  <p>Replace the Bottom Tailgate Spindle Drive</p>
-  <ul>
-    <li>B510222</li>
-  </ul>
-  <p>Program Control Units (DME) & (FZD) - NO X1's</p>
-  <ul>
-    <li>B120921</li>
-    <li>B610922</li>
-  </ul>
-  <p>Program the Dual Storage System</p>
-  <ul>
-    <li>B610321</li>
-  </ul>
-  <p>Program the Digital Motor Electronics</p>
-  <ul>
-    <li>B121211</li>
-  </ul>
-  <p>Program the Rear View Camera Display</p>
-  <ul>
-  <li>B663319</li>
-  </ul>
-  <p>Program the Sunroof Operation</p>
-  <ul>
-    <li>B610211</li>
-  </ul>
-  <div class="header">
-  <h2>Special Ordered Parts</h2>
+<table>
+  <tbody>
+    <!-- New Vehicle Services -->
+  <thead>
+    <tr>
+<th scope="col">New Vehicle Limited Warranty - Covered Services</th>
+    </tr>
+  </thead>
+  <tr>
+    <td>Lockout Service</td>
+    <td>Emergency Fuel Delivery <em>(Stranded on side of road)</em></td>
+  </tr>
+  <tr>
+    <td>Jump Start & Battery Replacement <em>if Faulty</em></td>
+    <td>Fluid Top Off <em>(Engine Oil, Washer Fluid)</em></td>
+  </tr>
+  <tr>
+    <td>Low Tire Pressure Adjustment</td>
+    <td>Key Fob Battery Replacement</td>
+  </tr>
+  <tr>
+    <td>Service Resets <em>(Technician forgot to reset)</em></td>
+    <td>Garage Degrease <em>(Oil spots after oil service)</em></td>
+  </tr>
+    <!-- SOP -->
+  <thead>
+    <tr>
+<th scope="col">Special Ordered Parts</th>
+    </tr>
+  </thead>
+  <tr>
+    <td>Engine Air Filters</td>
+    <td>Microfilters</td>
+  </tr>
+  <tr>
+    <td>Wiper Blades</td>
+    <td>Tow Hook Covers</td>
+  </tr>
+  <tr>
+    <td>Key Fob Transmitter</td>
+    <td>Some <em>Exterior</em> & <em>Interior</em> Trim Pieces</td>
+  </tr>
+    <!-- Recalls -->
+ <thead>
+    <tr>
+<th scope="col">Safety & Emission Recalls</th>
+<th scope="col">Bulletin No.</th>
+    </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>Takata Front Driver Airbag Module</td>
+    <td>B651115 | B650416 | B650217 | B650320 | B650519</td>
+  </tr>
+  <tr>
+    <td>Takata Front Passenger Airbag Module</td>
+    <td>B651714 | B650120 | B650219 | B650817 | B651513</td>
+  </tr>
+  <tr>
+    <td>Driver's Front Airbag (NADI) Inflator</td>
+    <td>B650921 | B652419 | B652519</td>
+  </tr>
+  <tr>
+    <td>Positive Crankcase Ventilation (PCV) Valve Heater</td>
+    <td>B110122</td>
+  </tr>
+  <tr>
+      <td>Crankcase Breather</td>
+      <td>B110901</td>
+  </tr>
+  <tr>
+    <td>Blower Motor Wiring</td>
+    <td>B640717 | B640619</td>
+  </tr>
+    <tr>
+    <td>Check the Battery Cable Connection</td>
+    <td>B611412</td>
+  </tr>
+    <tr>
+    <td>Repair the Positive/Negative Battery Cable</td>
+    <td>B611119 | B610213 | B610918</td>
+  </tr>
+    <tr>
+    <td>Ground Cable for Rear Light Lamps</td>
+    <td>B630611</td>
+  </tr>
+    <tr>
+    <td>Replace Rear Lamp Bulb Carriers</td>
+    <td>B630613</td>
+  </tr>
+    <tr>
+    <td>Both Rear Reflectors</td>
+    <td>B630717</td>
+  </tr>
+    <tr>
+    <td>Third Brake Lamp</td>
+    <td>B630220</td>
+  </tr>
+    <tr>
+      <td>OC3 Mat - <strong>X3's ONLY</strong></td>
+    <td>B651617</td>
+  </tr>
+    <tr>
+    <td>Safety Belt Retractor</td>
+    <td>B720421</td>
+  </tr>
+    <tr>
+    <td>Emergency Locking Retractor</td>
+    <td>B720219</td>
+  </tr>
+    <tr>
+    <td>B-Pillar Occupant Protection</td>
+    <td>B511719</td>
+  </tr>
+    <tr>
+    <td>Engine Belt Ilder Pulley Bolt</td>
+    <td>B260217</td>
+  </tr>
+    <tr>
+    <td>Checking the Front Side Panel</td>
+    <td>B410321</td>
+  </tr>
+    <tr>
+    <td>Replace the Bottom Tailgate Spindle Drive</td>
+    <td>B510222</td>
+  </tr>
+    <tr>
+      <td>Program Control Units (DME) & (FZD)<br>
+        <strong>Applicable for 2016 & Newer X1's ONLY</strong> 
+      </td>
+    <td>B120621 | B120921 | B610922</td>
+      <tr>
+        <td>Program the Body Domain Control (BDC) Unit</td>
+        <td>B340820</td>
+    </tr>
+    <tr>
+    <td>Program the Dual Storage System</td>
+    <td>B610321</td>
+  </tr>
+    <tr>
+    <td>Program the Digital Motor Electronics</td>
+    <td>B121211</td>
+  </tr>
+    <tr>
+    <td>Program the Rear View Camera Display</td>
+    <td>B663319</td>
+  </tr>
+    <tr>
+    <td>Program the Sunroof Operation</td>
+    <td>B610211</td>
+  </tr>
+    </tbody>
+</table>
+  <br>
+  <div class=footer>
+    <h5><strong>Note: We will drive up to 100 miles from the dealership.</strong></h5> 
   </div>
-  <ul>
-    <li>Engine Air Filters</li>
-    <li>Microfilters</li>
-    <li>Wiper Blades</li>
-    <li>Tow Hook Covers</li>
-    <li>Some Trim Pieces</li>
-  </ul>
-  <h5>Note: Recalls-up to 100 miles from dealership. Customer pay-up to 50 miles from the dealership.</h5>
+  <!-- Link to servicemobile -->
+  <br>
+  <div class="link">
+  <a href="https://www.motorwerksbmw.com/servicemobile/" target="_blank">This is the link to Motorwerks BMW Mobile Service - <strong>Main</strong></a>
+  </div>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
