--- a/motorwerks.html
+++ b/motorwerks.html
@@ -34,6 +34,17 @@
     <td>Service Resets <em>(Technician forgot to reset)</em></td>
     <td>Garage Degrease <em>(Oil spots after oil service)</em></td>
   </tr>
+    <!--Customer Pay-->
+    <thead>
+    <tr>
+<th scope="col">Customer Pay Services</th>
+    </tr>
+  </thead>
+  <tr>
+    <td>Battery Registration</td>
+    <td>Tire Rotation/Tire & Wheel Swap<br>
+      <strong>Only if there is already a set at home</strong></td>
+  </tr>
     <!-- SOP -->
   <thead>
     <tr>
